--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=TodoListGpt
+
+spring.datasource.url=jdbc:mysql://localhost:3306/todo_app
+spring.datasource.username=todo_user
+spring.datasource.password=todo_user
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
